[package]
name = "mpc_exploration"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100" }
axum = { version = "0.8.6", features = ["macros"] }
dotenvy = "0.15.7"
futures = "0.3.31"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = {version = "2.0.17" }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["timeout", "trace", "request-id"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20" }
